# vector-db-benchmark

./: .gitignore  pyproject.toml  set_up_vm.sh
datasets/: datasets.json
engine/base_client/: search.py
engine/clients/: client_factory.py
engine/clients/chroma/: __init__.py  config.py  configure.py  search.py  upload.py
engine/servers/qdrant-single-node/: docker-compose.yaml
experiments/configurations/: chroma-test.json
notebooks/: chroma.ipynb  qdrant.ipynb
