[tool.poetry]
name = "vector-db-benchmark"
version = "0.1.0"
description = ""
authors = ["Kacper Łukawski <kacper.lukawski@qdrant.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
qdrant-client = "^1.3.0"
typer = "^0.6.1"
jsons = "^1.6.3"
h5py = "^3.7.0"
weaviate-client = "^3.6.0"
elasticsearch = "^8.4.3"
pymilvus = "^2.2.0"
redis = "^4.3.4"
ipdb = "^0.13.9"
opensearch-py = "^2.2.0"
chromadb = "^0.3.29"
tokenizers = "^0.13.3"
ipykernel = "^6.24.0"
stopit = "^1.1.2"


[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
